@@ -15,9 +15,9 @@ code,pre {
 
 #head {
 	margin: 0;
-	padding: 5px 5px 0 1em;
+	padding: 5px;
+	padding-left: 1em;
 	background: #FFCC00;
-	border-bottom: 1px solid black;
 }
 
 #head h1 {
@@ -25,58 +25,43 @@ code,pre {
 	padding: 0;
 }
 
-/* Based on "Updated Simple CSS Tabs" from silverorange labs:
-   http://labs.silverorange.com/archives/2004/may/updatedsimple */
+/* Based on "Eric Meyer's tabbed navbar" from Eric Meyer:
+   http://css.maxdesign.com.au/listamatic/horizontal05.htm */
 #tabs {
-	position: relative;
-	width: 100%;
-	height: 3em;
-	width: 50em; /* a width is required for Opera, older Mozilla browsers, and Konqueror browsers */
-}
-
-#tabs ul {
 	margin: 0;
-	padding: 0;
-	position: absolute;
-	bottom: -1px;
-	width: 50em; /* a width is required for Opera, older Mozilla browsers, and Konqueror browsers */
+	padding: 3px 1em;
+	background: #FFCC00;
+	border-bottom: 1px solid black;
 }
 
-#tabs ul li {
+#tabs li {
+	margin: 0;
 	display: inline;
 	list-style: none;
 }
 
-#tabs ul li a {
-	width: 7em;
-	display: block;
-	float: left;
-	padding: 4px 0;
-	margin: 1px 8px 0 0;
-	text-align: center;
+#tabs li a {
+	margin-left: 3px;
+	padding: 3px 0.5em;
 	text-decoration: none;
-	color: black;
-}
-
-#tabs ul li.selected a,#tabs ul li.selected a:hover {
-	margin-top: 0;
-	padding-bottom: 6px;
-	background: white;
-	border: 1px solid black;
-	border-bottom: none;
-}
-
-#tabs ul li a {
 	background: #FFFFCC;
 	border: 1px solid #808080;
 	border-bottom: none;
 }
 
-#tabs ul li a:hover {
-	margin-top: 0;
-	padding-bottom: 5px;
+#tabs li a:link { color: black; }
+#tabs li a:visited { color: black; }
+
+#tabs li a:hover {
+	color: black;
 	background: white;
 	border-color: black;
+}
+
+#tabs li a#current {
+	background: white;
+	border: 1px solid black;
+	border-bottom: 1px solid white;
 }
 
 #ads {
