@@ -1,3 +1,8 @@
+2007-06-17 Tim
+ PATCH: [ 1738750 ] Web: Use Eric Meyer's tabbed navbar
+  Web: page.inc
+  Web\css: screen.css
+
 2007-06-13
  PATCH: [ 1734072 ] Upgrade website to PHP 5
   Web: .htaccess
